# mastermind-solver

./: .gitignore  CMakeLists.txt  LICENSE-3RD-PARTY  README.md
mastermind-solver-cpp/: CMakeLists.txt
mastermind-solver-cpp/src/: api.cpp  api.h  bruteforce.cpp  bruteforce.h  core.cpp  core.h  sat.cpp  sat.h  solver.h
mastermind-solver-cpp/test/: api_test.cpp  bruteforce_test.cpp  core_test.cpp  sat_test.cpp
mastermind-solver-js/: README.md  api_test.mjs  package.json
